// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="tickbox  mko_1oj1nfd-tickbox"
  >
    <label
      class="tickbox__label  mko_1oj1nfd-tickbox__label"
      for="jest"
    >
      <input
        class=" mko_1oj1nfd-tickbox__input"
        id="jest"
        type="checkbox"
      />
    </label>
  </div>
</div>
`;

exports[`should toggle checkbox on click 1`] = `
<div>
  <div
    class="tickbox  mko_1oj1nfd-tickbox"
  >
    <label
      class="tickbox__label  mko_1oj1nfd-tickbox__label"
      for="jest"
    >
      <input
        class=" mko_1oj1nfd-tickbox__input"
        id="jest"
        type="checkbox"
      />
      checkbox test
    </label>
  </div>
</div>
`;
